[package]
name = "fuzzle-bot"
version = "0.1.0"
edition = "2021"

[lints.rust]

unused_must_use = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
unsafe_code = "deny"
unused_mut = "deny"
unsafe_op_in_unsafe_fn = "deny"
deprecated_in_future = "deny"
elided_lifetimes_in_paths = "deny"
ffi_unwind_calls = "deny"
keyword_idents = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "deny"
unused_macro_rules = "deny"
unused_tuple_struct_fields = "deny"

[lints.clippy]

disallowed_methods = "deny"
redundant_type_annotations = "deny"
partial_pub_fields = "deny"
style = "deny"
unwrap_in_result = "deny"
get_unwrap = "deny"
missing_const_for_fn = "deny"
same_name_method = "deny"
nursery = "deny"
map_err_ignore = "deny"
enum_glob_use = "deny"
assertions_on_result_states = "deny"
string_to_string = "deny"
perf = "deny"
create_dir = "deny"
format_push_string = "deny"
error_impl_error = "deny"
suspicious = "deny"
empty_drop = "deny"
exit = "deny"
expect_used = "deny"
if_then_some_else_none = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
maybe_infinite_iter = "deny"
empty_structs_with_brackets = "deny"
let_underscore_untyped = "deny"
missing_asserts_for_indexing = "deny"
panic = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = 'symbols'
overflow-checks = true  

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive", "env"] }
csv = "1.3.0"
flate2 = "1.0.28"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls", "blocking", "hyper-rustls", "__rustls", "__tls", "rustls-tls"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
teloxide = { version = "0.12", features = ["macros", "auto-send", "ctrlc_handler", "rustls", "throttle"], default-features = false }
log = "0.4"
pretty_env_logger = "0.5"
futures = "0.3.29"
serde_json = "1.0.108"
itertools = "0.12.0"
nom = "7.1.3"
image = { version = "0.24.7", features = ["webp", "png"], default-features = false }
palette = "0.7.3"
blake2 = "0.10.6"
url = "2.5.0"
base64 = "0.21.5"
unicode-segmentation = "1.10.1"
rand = "0.8.5"
regex = "1.10.2"
strsim = "0.11.0"
chumsky = "0.9.3"
tempfile = "3.9.0"
rustdct = "0.7.1"
sqlx = { version = "0.7.3", default-features = false, features = ["macros", "migrate", "sqlx-macros", "sqlite", "runtime-tokio", "chrono"] }
emojis = "0.6.1"
thiserror = "1.0.56"
