[package]
name = "fuzzle-bot"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused = "allow"
unused_results = "allow"
unused_crate_dependencies = "allow"
unreachable_code = "allow"
unused_variables = "allow"
unreachable_pub = "allow"

dead_code = "allow" # use cfg to exclude from compilation; TODO: deny
unused_must_use = "allow"
missing_copy_implementations = "allow"
missing_debug_implementations = "allow"
unsafe_code = "allow"
unused_mut = "allow"
unsafe_op_in_unsafe_fn = "allow"
deprecated_in_future = "allow"
elided_lifetimes_in_paths = "allow"
ffi_unwind_calls = "allow"
keyword_idents = "allow"
macro_use_extern_crate = "allow"
meta_variable_misuse = "allow"
trivial_casts = "allow"
trivial_numeric_casts = "allow"
unused_qualifications = "allow"
unused_macro_rules = "allow"

[lints.clippy]
pedantic = "allow"
unwrap_used = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
print_stdout = "allow"
dbg_macro = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
impl_trait_in_params = "allow"
indexing_slicing = "allow"
panic_in_result_fn = "allow"
use_debug = "allow"
integer_division = "allow"
complexity = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"

todo = "deny"
disallowed_methods = "deny"
redundant_type_annotations = "deny"
partial_pub_fields = "deny"
style = "deny"
unwrap_in_result = "deny"
get_unwrap = "deny"
missing_const_for_fn = "deny"
same_name_method = "deny"
nursery = "deny"
map_err_ignore = "deny"
enum_glob_use = "deny"
assertions_on_result_states = "deny"
string_to_string = "deny"
perf = "deny"
create_dir = "deny"
format_push_string = "deny"
error_impl_error = "deny"
suspicious = "deny"
empty_drop = "deny"
exit = "deny"
expect_used = "deny"
if_then_some_else_none = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
maybe_infinite_iter = "deny"
empty_structs_with_brackets = "deny"
let_underscore_untyped = "deny"
missing_asserts_for_indexing = "deny"
panic = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# teloxide = { version = "0.12", features = ["macros", "ctrlc_handler", "rustls", "throttle"], default-features = false, path = "../../teloxide/crates/teloxide" }
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler", "rustls", "throttle"], default-features = false, git = "https://github.com/avoonix/teloxide.git", branch = "future-bot-api" }

actix-files = { version = "0.6" }
actix-web = { version = "4", features = ["macros"] }
anyhow = { version = "1.0.100" }
chrono = { version = "0.4.43", features = ["serde"] }
csv = { version = "1.4.0" }
flate2 = { version = "1.1.8" }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "blocking", "__rustls", "__tls", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "tracing"] }
futures = { version = "0.3.31" }
serde_json = "1.0.149"
itertools = "0"
nom = { version = "8.0.0" }
image = { version = "0.25.9", features = ["webp", "png", "jpeg", "rayon"], default-features = false }
palette = { version = "0.7.6" }
blake2 = { version = "0.10.6" }
url = { version = "2.5.8" }
base64 = { version = "0.22.1" }
unicode-segmentation = { version = "1.12.0" }
rand = { version = "0.9.2" }
regex = { version = "1.12.2" }
strsim = { version = "0.11.1" }
diesel = { version = "2.3.6", default-features = false, features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
emojis = { version = "0.8.0" }
thiserror = { version = "2.0.18" }
cached = { version = "0.56.0" }
hex = { version = "0.4.3" }
ring = { version = "0.17.14" }
actix-web-lab = { version = "0.24.3" }
once_cell = { version = "1.21.3" }
serde_repr = "0.1.20"
qdrant-client = { version = "1.16.0" }
uuid = { version = "1.20.0", features = ["v5"] }
duplicate_detector = { path = "../duplicate_detector" }
tag_search_engine = { path = "../tag_search_engine" }
prost = "0.14.3"
config = { version = "0.15.19", default-features = false, features = ["json"] }
enum-primitive-derive = "0.3.0"
num-traits = "0.2.19"
diesel_migrations = "2.3.1"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
maud = { version = "0.27.0", features = ["actix-web"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tonic = { version = "0.14", features = []}
tracing-actix-web = { version = "0.7" }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.31"
pprof = { version = "0.15", features = ["prost-codec"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32.1"
opentelemetry-appender-tracing = "0.31.1"
tokio-metrics = { version = "0.4.7", features = ["metrics-rs-integration"] }
metrics = "0.24.3"
sysinfo = "0.38.0"
metrics-util = "0.20.1"
scc = "3.5.4"
portable-atomic = { version = "1.13.1", features = ["float"] }
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"
tonic-prost = "0.14.3"
deadpool-diesel = { version = "0.6.1", features = ["sqlite", "tracing"] }
deadpool = { version = "0.12.3", features = ["rt_tokio_1"] }





[build-dependencies]
tonic-prost-build = "0.14.3"

# the docker build script will add the bin-target-triple option below this line
